<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

            <ImageView
                    android:id="@+id/babelLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/babel_logo_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/babellogo" />

            <EditText
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:autofillHints="emailAddress"
                    android:drawableEnd="@drawable/ic_baseline_search_24"
                    android:hint="@string/Search"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@+id/babelLogo" />

            <LinearLayout
                    android:id="@+id/loginContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/search">

                <Button
                        android:id="@+id/logoutButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.5"
                        android:background="@color/mediumGray"
                        android:enabled="true"
                        android:onClick="btnMainLogout"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="Logout"
                        android:textColor="@color/black" />

                <Button
                        android:id="@+id/loginButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="0.5"
                        android:background="@color/mediumGray"
                        android:enabled="true"
                        android:onClick="btnMainLogin"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/routerContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/loginContainer">

                <Button
                        android:id="@+id/wishListButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/colorPrimaryDark"
                        android:enabled="true"
                        android:onClick="btnMainWishList"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/wish_list"
                        android:textColor="@color/white" />

                <Button
                        android:id="@+id/productsButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/colorPrimaryDark"
                        android:enabled="true"
                        android:onClick="btnMainProducts"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/productos"
                        android:textColor="@color/white" />

                <Button
                        android:id="@+id/cartButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:background="@color/colorPrimaryDark"
                        android:enabled="true"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/carrito"
                        android:textColor="@color/white" />

            </LinearLayout>

            <FrameLayout
                    android:id="@+id/coverContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@id/routerContainer">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/cover"
                        android:scaleType="centerCrop"
                        android:src="@drawable/banner" />

                <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:paddingTop="120dp">

                    <TextView
                            android:id="@+id/textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:layout_weight="0.5"
                            android:paddingStart="16dp"
                            android:text="@string/quetza_tee_shirt"
                            android:textColor="@color/white"
                            android:textSize="32sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.497"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView2"
                            tools:ignore="RtlSymmetry" />

                    <LinearLayout
                            android:id="@+id/buttonsCover"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:orientation="vertical">

                        <Button
                                android:id="@+id/addToCart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:enabled="true"
                                android:paddingStart="8dp"
                                android:paddingEnd="8dp"
                                android:text="@string/agregar_al_carrito"
                                android:textColor="@color/white" />

                        <Button
                                android:id="@+id/addToWishList"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:enabled="true"
                                android:paddingStart="8dp"
                                android:paddingEnd="8dp"
                                android:text="@string/agregar_al_wish_list"
                                android:textColor="@color/white" />

                        <Button
                                android:id="@+id/DetailsProduct"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@android:color/transparent"
                                android:enabled="true"
                                android:onClick="btnDetailsProducts"
                                android:paddingStart="8dp"
                                android:paddingEnd="8dp"
                                android:text="@string/ver_detalles"
                                android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                    android:id="@+id/footerContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/coverContainer">

                <TextView
                        android:id="@+id/footer-1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="16dp"
                        android:paddingStart="16dp"
                        android:text="@string/copyright_2020_all_rights_reserved"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        tools:ignore="RtlSymmetry" />

                <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:background="#636363" />

                <TextView
                        android:id="@+id/footer-2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="32dp"
                        android:paddingStart="16dp"
                        android:text="@string/con_por_andrea_y_jama"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2"
                        tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>